--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
     },
     "autoload": {
         "psr-0": {
-            "VideoAPI": "src/"
+            "Hubble": "src/"
         }
     }
 }
